--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@ body {
   background-color: var(--headingColor);
   color: var(--white);
   font-family: "Poppins", sans-serif;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: relative;
+  overflow-x: hidden;
 }
 
 a {
@@ -215,6 +219,22 @@ section {
 /* =====About===== */
 .about {
   margin-bottom: 100px;
+}
+
+.about .about-imgbox {
+  width: 70%;
+  border-radius: 40px;
+  overflow: hidden;
+}
+
+.about .about-imgbox img {
+  width: 100%;
+  height: 100%;
+  transition: 0.4s ease-in-out all;
+}
+
+.about .about-imgbox:hover img {
+  transform: scale(1.5) !important;
 }
 
 .about .primaryBtn {
