--- a/src/App.css
+++ b/src/App.css
@@ -296,6 +296,16 @@ article img {
 article .box {
   position: relative;
   transition: 0.5s;
+  width: 270px;
+  height: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0px 5px #e0a80d;
+}
+
+article .box .img {
+  width: 100%;
+  height: 100%;
 }
 
 .overLay {
@@ -380,6 +390,7 @@ article .box:hover .overLay::after {
 
 .testimonials .img {
   display: flex;
+
   align-items: center;
   justify-content: center;
   width: 120px;
